# polymarket-mcp

./: Dockerfile  README.md  polymarket_mcp.py  polymarket_mcp.py.bak  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.sh
