[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mcp"
version = "0.3.0"
description = "MCP + HTTP server for Polymarket prediction markets. Zero dependencies, no API key needed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["mcp", "polymarket", "prediction-markets", "model-context-protocol", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/amerilain/polymarket-mcp"
Repository = "https://github.com/amerilain/polymarket-mcp"
Issues = "https://github.com/amerilain/polymarket-mcp/issues"

[project.scripts]
polymarket-mcp = "polymarket_mcp:main"
